--- a/public/404.html
+++ b/public/404.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>The page you were looking for doesn't exist (404)</title>
-  <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-    div.dialog {
-      width: 25em;
-      padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
-    }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
-  </style>
-</head>
-
-<body>
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
-  </div>
-</body>
+<html lang='en'>
+  <head>
+    <title>Git</title>
+    <meta charset='utf-8'>
+    <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
+    <link href="/assets/errors.css?body=1" media="screen" rel="stylesheet" type="text/css" />
+    <!--[if (gte IE 6)&(lte IE 8)]>
+      <script src="/assets/selectivizr-min.js?body=1" type="text/javascript"></script>
+    <![endif]-->
+    <script src="http://use.typekit.com/jsq2fql.js" type="text/javascript"></script>
+    <script>
+      //<![CDATA[
+        try{Typekit.load();}catch(e){}
+      //]]>
+    </script>
+  </head>
+  <body>
+    <div class='inner'>
+      <p>
+        <img src="/images/404.png" alt="404" />
+      </p>
+      <h1>That page doesn't exist.</h1>
+      <p>
+        We recently redesigned the site and older URLs may now lead to missing pages. We apologize for the inconvience.
+      </p>
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/documentation">Documentation</a></li>
+          <li><a href="/downloads">Downloads</a></li>
+          <li><a href="/community">Community</a></li>
+        </ul>
+      </nav>
+    </div>
+  </body>
 </html>
