Fixed typo on 404

--- a/public/404.html
+++ b/public/404.html
@@ -22,7 +22,7 @@
       </p>
       <h1>That page doesn't exist.</h1>
       <p>
-        We recently redesigned the site and older URLs may now lead to missing pages. We apologize for the inconvience.
+        We recently redesigned the site and older URLs may now lead to missing pages. We apologize for the inconvenience.
       </p>
       <nav>
         <ul>
