Fixed typo on 500

--- a/public/500.html
+++ b/public/500.html
@@ -22,7 +22,7 @@
       </p>
       <h1>Internal server error</h1>
       <p>
-        There was an error processing your request. We have been notified of the error and will investigate ASAP. We apologize for the inconvience.
+        There was an error processing your request. We have been notified of the error and will investigate ASAP. We apologize for the inconvenience.
       </p>
       <nav>
         <ul>
