retinaizing overlooked images

--- a/public/404.html
+++ b/public/404.html
@@ -18,7 +18,7 @@
   <body>
     <div class='inner'>
       <p>
-        <img src="/images/404.png" alt="404" />
+        <img src="/images/404@2x.png" alt="404" width="456" height="149" />
       </p>
       <h1>That page doesn't exist.</h1>
       <p>
