--- a/public/500.html
+++ b/public/500.html
@@ -18,7 +18,7 @@
   <body>
     <div class='inner'>
       <p>
-        <img src="/images/500.png" alt="500" />
+        <img src="/images/500@2x.png" alt="500" width="456" height="149" />
       </p>
       <h1>Internal server error</h1>
       <p>
