--- a/public/404.html
+++ b/public/404.html
@@ -22,7 +22,7 @@
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/about">About</a></li>
-          <li><a href="/documentation">Documentation</a></li>
+          <li><a href="/doc">Documentation</a></li>
           <li><a href="/downloads">Downloads</a></li>
           <li><a href="/community">Community</a></li>
         </ul>
