change style to almost respansive

--- a/public/500.html
+++ b/public/500.html
@@ -19,13 +19,11 @@
         There was an error processing your request. We have been notified of the error and will investigate ASAP. We apologize for the inconvenience.
       </p>
       <nav>
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/about">About</a></li>
-          <li><a href="/doc">Documentation</a></li>
-          <li><a href="/downloads">Downloads</a></li>
-          <li><a href="/community">Community</a></li>
-        </ul>
+	<a href="/">Home</a> |
+	<a href="/about">About</a> |
+	<a href="/doc">Documentation</a> |
+	<a href="/downloads">Downloads</a> |
+	<a href="/community">Community</a>
       </nav>
     </div>
   </body>
