--- a/public/404.html
+++ b/public/404.html
@@ -19,14 +19,13 @@
         We recently redesigned the site and older URLs may now lead to missing pages. We apologize for the inconvenience.
       </p>
       <nav>
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/about">About</a></li>
-          <li><a href="/doc">Documentation</a></li>
-          <li><a href="/downloads">Downloads</a></li>
-          <li><a href="/community">Community</a></li>
-        </ul>
+      	<a href="/">Home</a> |
+	<a href="/about">About</a> |
+	<a href="/doc">Documentation</a> |
+	<a href="/downloads">Downloads</a> |
+	<a href="/community">Community</a>
       </nav>
     </div>
   </body>
 </html>
+
