--- a/public/422.html
+++ b/public/422.html
@@ -2,10 +2,11 @@
 <html>
 <head>
   <title>The change you wanted was rejected (422)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style type="text/css">
     body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
     div.dialog {
-      width: 25em;
+      max-width: 25em;
       padding: 0 4em;
       margin: 4em auto 0 auto;
       border: 1px solid #ccc;
