--- a/public/500.html
+++ b/public/500.html
@@ -4,7 +4,8 @@
     <title>Git</title>
     <meta charset='utf-8'>
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-    <link href="/assets/errors.css?body=1" media="screen" rel="stylesheet" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="/assets/errors.css" rel="stylesheet"/>
     <!--[if (gte IE 6)&(lte IE 8)]>
       <script src="/assets/selectivizr-min.js?body=1" type="text/javascript"></script>
     <![endif]-->
