--- a/content/downloads/win.html
+++ b/content/downloads/win.html
@@ -1,30 +1,33 @@
-<%- @section = "downloads" %>
-<%- @subsection = "" %>
-<%- @page_title = "Git - Downloading Package" %>
-
-<% content_for :sidebar do %>
-  <%= render 'shared/book' %>
-<% end %>
+---
+section: "downloads"
+title: "Git - Downloading Package"
+aliases:
+- /download/win
+---
 
 <div id="main">
   <h1>Download for Windows</h1>
   <p>
-  <%= raw "<strong><a id=\"auto-download-link\" href=\"#{@download.url}\">Click here to download </a></strong>" %><%= raw " the latest (<strong>#{@download.version.name}</strong>) <strong>#{@bitness}</strong> version of <strong>Git for Windows</strong>. This is the most recent <a href='#{@project_url}'>maintained build</a>. It was released <strong>#{time_ago_in_words @download.release_date} ago</strong>, on #{@download.release_date.strftime("%Y-%m-%d")}." %>
+  <strong><a id="auto-download-link" href="{{< site-param windows_installer.installer64.url >}}">Click here to download </a></strong>
+    the latest (<strong id="auto-download-version">{{< site-param windows_installer.installer64.version >}}</strong>)
+    <strong id="auto-download-bitness">64-bit</strong> version of <strong>Git for Windows</strong>.
+    This is the most recent <a href="https://git-for-windows.github.io/">maintained build</a>.
+    It was released <span id="relative-release-date"></span>on <span id="auto-download-date">{{< site-param windows_installer.installer64.release_date >}}</span>.
   </p>
   <h3>Other Git for Windows downloads</h3>
   <h4>Standalone Installer</h4>
   <p>
-  <%= raw "<strong><a href=\"#{@download32.url}\">32-bit Git for Windows Setup</a>.</strong>" %>
+  <strong><a href="{{< site-param windows_installer.installer32.url >}}">32-bit Git for Windows Setup</a>.</strong>
   </p>
   <p>
-  <%= raw "<strong><a href=\"#{@download64.url}\">64-bit Git for Windows Setup</a>.</strong>" %>
+    <strong><a href="{{< site-param windows_installer.installer64.url >}}">64-bit Git for Windows Setup</a>.</strong>
   </p>
   <h4>Portable ("thumbdrive edition")</h4>
   <p>
-    <%= raw "<strong><a href=\"#{@download32portable.url}\">32-bit Git for Windows Portable</a>.</strong>" %>
+    <strong><a href="{{< site-param windows_installer.portable32.url >}}">32-bit Git for Windows Portable</a>.</strong>
   </p>
   <p>
-    <%= raw "<strong><a href=\"#{@download64portable.url}\">64-bit Git for Windows Portable</a>.</strong>" %>
+    <strong><a href="{{< site-param windows_installer.portable64.url >}}">64-bit Git for Windows Portable</a>.</strong>
   </p>
   <h4>Using winget tool</h4>
   <p>
@@ -32,7 +35,8 @@
     <code>winget install --id Git.Git -e --source winget</code>
   </p>
   <p class="small">
-    <%= raw "The current source code release is version <strong>#{@latest.name}</strong>. If you want the newer version, you can build it from <a href=\"#{@source_url}\">the source code</a>." %>
+    The current source code release is version <strong>{{< site-param latest_version >}}</strong>.
+    If you want the newer version, you can build it from <a href="https://github.com/git-for-windows/git">the source code</a>.
   </p>
   
   <h2>Now What?</h2>
@@ -51,7 +55,7 @@
       <a href="/downloads/guis">
       <img src="/images/icons/nav-download-gui.png" />
       <h3>Download a GUI</h3>
-      <p><%= raw "Several free and commercial GUI tools are available for the #{@platform.capitalize} platform." %></p>
+      <p>Several free and commercial GUI tools are available for the Windows platform.</p>
       </a>
     </li>
     <li>
