Add html code tags for ko&en

--- a/external/book/content/book/en/v2/Git-Internals-The-Refspec.html
+++ b/external/book/content/book/en/v2/Git-Internals-The-Refspec.html
@@ -38,8 +38,8 @@ Suppose you were following along with the last couple sections and had created a
 </div>
 </div>
 <div class="paragraph">
-<p>The format of the refspec is, first, an optional <code>`, followed by `&lt;src&gt;:&lt;dst&gt;`, where `&lt;src&gt;` is the pattern for references on the remote side and `&lt;dst&gt;` is where those references will be tracked locally.
-The `</code> tells Git to update the reference even if it isn’t a fast-forward.</p>
+<p>The format of the refspec is, first, an optional <code>`</code>, followed by <code>&lt;src&gt;:&lt;dst&gt;</code>, where <code>&lt;src&gt;</code> is the pattern for references on the remote side and <code>&lt;dst&gt;</code> is where those references will be tracked locally.
+The <code>`</code> tells Git to update the reference even if it isn’t a fast-forward.</p>
 </div>
 <div class="paragraph">
 <p>In the default case that is automatically written by a <code>git remote add origin</code> command, Git fetches all the references under <code>refs/heads/</code> on the server and writes them to <code>refs/remotes/origin/</code> locally.
