book: re-render to add the redirects
I just fixed the `update-book2.rb` script so that URLs like
https://git-scm.com/book/ (with a trailing slash) redirect again; This
commit reflects the impact on the automatically rendered content files
in `external/book/`.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/external/book/content/book/en/v2/_index.html
+++ b/external/book/content/book/en/v2/_index.html
@@ -16,4 +16,6 @@ page_title: Git - Book
 url: "/book/en/v2.html"
 aliases:
 - "/book/en/v2/index.html"
+- "/book/en/index.html"
+- "/book/index.html"
 ---
